--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     --header-color: #5046ac;
     --text-color: #fff;
     --main-color: #008b8b;
+    --second-main-color: #008b8ba1;
 }
 
 *::selection {
@@ -45,7 +46,7 @@ section {
     left: 0;
     width: 100%;
     padding: 2rem 9%;
-    background: var(--header-color);
+    background: var(--second-bg-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -198,23 +199,72 @@ section {
 
 .projects h2 {
     margin-bottom: 4rem;
+    font-size: 5rem;
+    justify-content: center;
+    text-align: center;
 }
 
 .projects-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     align-items: center;
     gap: 2.5rem;
 }
 
-.projects-container .project-box {
+.projects-container .projects-box {
     position: relative;
     border-radius: 2rem;
-    box-shadow: 0 0 1rem var(--bg-color);
     overflow: hidden;
     display: flex;
+    border: .2rem solid var(--second-main-color);
 }
 
-.project-box img {
-    width: 5%;
+.projects-box img {
+    width: 100%;
+    transition: 0.3s ease;
+}
+
+.projects-box:hover img {
+    transform: scale(1.1);
+}
+
+.projects-box .projects-layer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.1), var(--second-bg-color));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 4rem;
+    transform: translateY(100%);
+    transition: 0.5s ease;
+}
+
+.projects-box:hover .projects-layer {
+    transform: translateY(0%);
+}
+
+.projects-layer h4 {
+    font-size: 3rem;
+    font-weight: 600;
+}
+
+.projects-layer p {
+    font-size: 1.6rem;
+    margin: .3rem 0 1rem;
+}
+
+.projects-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--second-main-color);
+    border-radius: 2rem;
 }
