start experience page

--- a/style.css
+++ b/style.css
@@ -268,3 +268,7 @@ section {
     background: var(--second-main-color);
     border-radius: 2rem;
 }
+
+.experience {
+    background: var(--second-bg-color);
+}
