--- a/style.css
+++ b/style.css
@@ -265,48 +265,27 @@ section {
     margin: .3rem 0 1rem;
 }
 
-/* 
-.projects-layer a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 5rem;
-    height: 5rem;
-    background: var(--second-main-color);
-    border-radius: 2rem;
-} */
-
 .projects-layer a {
     position: absolute;
     bottom: 10px;
     right: 10px;
-    color: #fff;
+    color: var(--text-color);
     background: var(--second-main-color);
     border-radius: 1.5rem;
     padding: 1.5rem;
-    /* width: 5rem;
-    height: 5rem;
-    align-items: center;
-    justify-content: center; */
     font-size: 1.5rem;
     transition: 0.5s ease;
 }
-/* 
-.projects-layer a i {
-    font-size: 2rem;
-    color: white;
-    align-items: right;
-    justify-content: right;
-} */
 
 .experience {
     background: var(--second-bg-color);
 }
 
 .experience h2 {
-    margin-bottom: 4rem;
     font-size: 5rem;
+    display: flex;
+    align-items: top;
     justify-content: center;
-    text-align: center;
 }
+
 
