--- a/style.css
+++ b/style.css
@@ -204,14 +204,47 @@ section {
     text-align: center;
 }
 
-.projects-container {
+/* .projects-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.projects-container .projects-box {
+    position: relative;
+    border-radius: 2rem;
+    overflow: hidden;
+    display: flex;
+    border: .2rem solid var(--second-main-color);
+} */
+
+.projects-container1 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.projects-container1 .projects-box {
+    position: relative;
+    border-radius: 2rem;
+    overflow: hidden;
+    display: flex;
+    border: .2rem solid var(--second-main-color);
+}
+
+.projects-container2 {
+    width: 85%;
+    margin-top: 2.5rem;
+    padding-left: 17%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 2.5rem;
 }
 
-.projects-container .projects-box {
+.projects-container2 .projects-box {
     position: relative;
     border-radius: 2rem;
     overflow: hidden;
@@ -250,9 +283,9 @@ section {
 }
 
 .projects-layer h4 {
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 600;
-    line-height: 6rem;
+    line-height: 4rem;
 }
 
 .projects-layer p {
