--- a/style.css
+++ b/style.css
@@ -321,6 +321,26 @@ section {
     justify-content: center;
 }
 
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 100px auto;
+}
+
+.container {
+    padding: 10px 50px;
+    position: relative;
+    width: 50%;
+    background: var(--second-main-color);
+}
+
+.text-box {
+    padding: 20px 30px;
+    background: var(--bg-color);
+    position: relative;
+    border-radius: 6px;
+    font-size: 15px;
+}
 
 
 
