change file name

--- a/style.css
+++ b/style.css
@@ -323,22 +323,22 @@ section {
 
 .timeline {
     position: relative;
-    max-width: 1200px;
+    max-width: 1700px;
     margin: 100px auto;
 }
 
 .container {
-    padding: 10px 50px;
+    padding: 10px 70px;
     position: relative;
     width: 50%;
 }
 
 .text-box {
-    padding: 20px 30px;
+    padding: 50px 30px;
     background: var(--bg-color);
     position: relative;
-    border-radius: 6px;
-    font-size: 15px;
+    border-radius: 15px;
+    font-size: 25px;
 }
 
 .left-container {
@@ -351,23 +351,25 @@ section {
 
 .container img {
     position: absolute;
-    width: 70px;
+    width: 100px;
     border-radius: 50%;
-    right: -35px;
+    right: -50px;
     top: 32px;
     z-index: 10;
+    border: .2rem solid var(--main-color);
 }
 
 .right-container img {
-    left: -35px;
+    left: -50px;
 }
 
 .timeline::after {
     content: '';
     position: absolute;
+    color: white;
     width: 6px;
     height: 100%;
-    background: #fff;
+    background-color: white;
     top: 0;
     left: 50%;
     margin-left: -3px;
@@ -408,8 +410,8 @@ section {
     position: absolute;
     top: 38px;
     z-index: 1;
-    border-top: 12px solid transparent;
-    border-bottom: 12px solid transparent;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
     border-left: 15px solid var(--bg-color);
     right: -12px;
 }
@@ -420,8 +422,8 @@ section {
     position: absolute;
     top: 38px;
     z-index: 1;
-    border-top: 12px solid transparent;
-    border-bottom: 12px solid transparent;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
     border-right: 15px solid var(--bg-color);
     left: -12px;
 }
