--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ section {
     left: 0;
     width: 100%;
     padding: 2rem 9%;
-    background: var(--bg-color);
+    background: var(--second-bg-color);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -82,7 +82,7 @@ section {
     display: flex;
     justify-content: left;
     align-items: center;
-    background: var(--second-bg-color);
+    background: var(--bg-color);
 }
 
 .home-img img {
@@ -109,7 +109,7 @@ section {
     width: 7rem;
     height: 7rem;
     background: transparent;
-    border: .2rem solid var(--bg-color);
+    border: .2rem solid var(--second-bg-color);
     border-radius: 50%;
     font-size: 5rem;
     color: var(--main-color);
@@ -142,7 +142,7 @@ section {
 }
 
 .skills {
-    background: var(--bg-color);
+    background: var(--second-bg-color);
 }
 
 .skills h2 {
@@ -195,7 +195,7 @@ section {
 }
 
 .projects {
-    background: var(--second-bg-color);
+    background: var(--bg-color);
 }
 
 .projects h2 {
@@ -311,6 +311,11 @@ section {
     transition: 0.5s ease;
 }
 
+.experience {
+    background: var(--second-bg-color);
+    width: 100%;
+}
+
 .experience h2 {
     font-size: 5rem;
     display: flex;
@@ -328,6 +333,28 @@ section {
     padding: 10px 70px;
     position: relative;
     width: 50%;
+    animation: movedown 1s linear forwards;
+    opacity: 0;
+}
+
+@keyframes movedown {
+    0% {
+        opacity: 1;
+        transform: translateY(-30px);
+    }
+    
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }  
+}
+
+.container:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.container:nth-child(2) {
+    animation-delay: 1s;
 }
 
 .text-box {
@@ -361,33 +388,16 @@ section {
 }
 
 .timeline::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    height: 100%;
-    background-color: white;
-    top: 0;
-    left: 50%;
-    margin-left: -3px;
-    z-index: -1;
-    /* animation: moveline 6s linear forwards; */
+    animation: moveline 3s linear forwards;
 }
 
-/* @keyframes moveline {
+@keyframes moveline {
     0% {
         height: 0;
     }
     100% {
         height: 100%;
     }
-} */
-
-.container:nth-child(1) {
-    animation-delay: 0s;
-}
-
-.container:nth-child(2) {
-    animation-delay: 1s;
 }
 
 .text-box h2 {
@@ -428,7 +438,7 @@ section {
 
 
 .contact {
-    background: var(--second-bg-color);
+    background: var(--bg-color);
 }
 
 .contact h2 {
@@ -458,7 +468,7 @@ section {
     padding: 1.5rem;
     font-size: 1.6rem;
     color: var(--text-color);
-    background-color: var(--bg-color);
+    background-color: var(--second-bg-color);
     border-radius: 0.8rem;
     margin: 0.7rem 0;
 }
