--- a/style.css
+++ b/style.css
@@ -141,6 +141,10 @@ section {
     box-shadow: 0 0 1rem var(--main-color);
 }
 
+
+
+/* SKILLS PAGE */
+
 .skills {
     background: var(--second-bg-color);
 }
@@ -193,6 +197,10 @@ section {
     visibility: visible;
     opacity: 1;
 }
+
+
+
+/* PROJECTS PAGE */
 
 .projects {
     background: var(--bg-color);
@@ -311,6 +319,10 @@ section {
     transition: 0.5s ease;
 }
 
+
+
+/* EXPERIENCE PAGE */
+
 .experience {
     background: var(--second-bg-color);
     width: 100%;
@@ -333,20 +345,6 @@ section {
     padding: 10px 70px;
     position: relative;
     width: 50%;
-    animation: movedown 1s linear forwards;
-    opacity: 0;
-}
-
-@keyframes movedown {
-    0% {
-        opacity: 1;
-        transform: translateY(-30px);
-    }
-    
-    100% {
-        opacity: 1;
-        transform: translateY(0px);
-    }  
 }
 
 .container:nth-child(1) {
@@ -387,19 +385,6 @@ section {
     left: -50px;
 }
 
-.timeline::after {
-    animation: moveline 3s linear forwards;
-}
-
-@keyframes moveline {
-    0% {
-        height: 0;
-    }
-    100% {
-        height: 100%;
-    }
-}
-
 .text-box h2 {
     font-weight: 600;
 }
@@ -436,6 +421,7 @@ section {
 
 
 
+/* CONTACT PAGE */
 
 .contact {
     background: var(--bg-color);
@@ -483,6 +469,9 @@ section {
 }
 
 
+
+/* WEBSITE DIMENSIONS */
+
 @media (max-width: 1200px) {
     html {
         font-size: 55%;
@@ -527,5 +516,88 @@ section {
 
     .home {
         flex-direction: column;
+    }
+
+    .projects {
+        padding-bottom: 0.02rem;
+    }
+
+    .projects-container1 {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        align-items: center;
+        gap: 2.5rem;
+    }
+    
+    .projects-container1 .projects-box {
+        position: relative;
+        border-radius: 2rem;
+        overflow: hidden;
+        display: flex;
+        border: .2rem solid var(--second-main-color);
+    }
+    
+    .projects-container2 {
+        width: 85%;
+        margin-top: 2.5rem;
+        padding-left: 17%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        gap: 2.5rem;
+    }
+    
+    .projects-container2 .projects-box {
+        position: relative;
+        border-radius: 2rem;
+        overflow: hidden;
+        display: flex;
+        border: .2rem solid var(--second-main-color);
+    } 
+    
+    .projects-box img {
+        width: 100%;
+        /* transition: 0.3s ease; */
+    }
+    
+    /* .projects-box:hover img {
+        transform: scale(1.1);
+    } */
+    
+    .projects-box .projects-layer {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(rgba(0, 0, 0, 0.1), var(--second-bg-color));
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        padding: 0 4rem;
+        /* transform: translateY(100%);
+        transition: 0.5s ease; */
+    }
+/*     
+    .projects-box:hover .projects-layer {
+        transform: translateY(0%);
+    } */
+    
+    .projects-layer h4 {
+        font-size: 1.5rem;
+        font-weight: 600;
+        line-height: 1.5rem;
+    }
+
+    .projects-layer p {
+        font-size: 1rem;
+        margin: .3rem 0 1rem;
+    }
+    
+    .projects-layer s {
+        font-size: 1rem;
+        margin: .3rem 0 1rem;
     }
 }
