--- a/style.css
+++ b/style.css
@@ -701,10 +701,10 @@ section {
         margin: .3rem 0 1rem;
     }
 }
-
+/* 
 @media (max-width: 669px) {
 
-    /* PROJECTS PAGE */
+    /* PROJECTS PAGE 
 
     .projects {
         padding-bottom: 1rem;
@@ -739,8 +739,12 @@ section {
         transition: 0.5s ease;
     }
 }
+ */
 
-@media (max-width: 630px) {
+@media (max-width: 800px) {
+    section {
+        size: 4rem;
+    }
 
     /* PROJECTS PAGE */
 
@@ -756,12 +760,14 @@ section {
     }
 
     .projects-container1 {
-        width: 60rem;
+        width: 90%;
+        padding-left: 10%;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        align-items: center;
+        /* align-items: center; */
         gap: 2.5rem;
-        padding-left: 8rem;
+        /* padding-left: 8rem; */
+        justify-content: center;
     }
 
     .projects-container1 .projects-box {
@@ -773,14 +779,15 @@ section {
     }
 
     .projects-container2 {
-        width: 60rem;
+        width: 90%;
         margin-top: 2.5rem;
-        padding-left: 17%;
+        padding-left: 10%;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         align-items: center;
         gap: 2.5rem;
-        padding-left: 8rem;
+        /* padding-left: 8rem; */
+        justify-content: center;
     }
 
     .projects-container2 .projects-box {
@@ -824,13 +831,149 @@ section {
     .projects-layer h4 {
         font-size: 4rem;
         font-weight: 600;
-        line-height: 4rem;
-        margin-bottom: 2rem;
+        line-height: 4.25rem;
+        margin-bottom: 1rem;
     }
 
     .projects-layer p {
         font-size: 3rem;
+        line-height: 3.5rem;
+        margin: .3rem 0 1rem;
+    }
+
+    .projects-layer s {
+        font-size: 1.5rem;
+        margin: .3rem 0 1rem;
+    }
+
+    .projects-layer a {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        color: var(--text-color);
+        background: var(--second-main-color);
+        border-radius: 1.5rem;
+        padding: 2rem;
+        font-size: 2rem;
+        transition: 0.5s ease;
+    }
+}
+
+@media (max-width: 767px) {
+    /* PROJECTS PAGE */
+
+    .projects-layer h4 {
+        font-size: 3.5rem;
+        font-weight: 600;
+        line-height: 3.75rem;
+        margin-bottom: 1rem;
+    }
+
+    .projects-layer p {
+        font-size: 3rem;
+        line-height: 3.5rem;
+        margin: .3rem 0 1rem;
+    }
+
+    .projects-layer s {
+        font-size: 1.5rem;
+        margin: .3rem 0 1rem;
+    }
+
+    .projects-layer a {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        color: var(--text-color);
+        background: var(--second-main-color);
+        border-radius: 1.5rem;
+        padding: 2rem;
+        font-size: 2rem;
+        transition: 0.5s ease;
+    }
+}
+
+@media (max-width: 631px) {
+    /* PROJECTS PAGE */
+
+    .projects-layer h4 {
+        font-size: 3rem;
+        font-weight: 600;
+        line-height: 3.25rem;
+        margin-bottom: 1rem;
+    }
+
+    .projects-layer p {
+        font-size: 2.5rem;
         line-height: 3rem;
+        margin: .3rem 0 1rem;
+    }
+
+    .projects-layer s {
+        font-size: 1.5rem;
+        margin: .3rem 0 1rem;
+    }
+
+    .projects-layer a {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        color: var(--text-color);
+        background: var(--second-main-color);
+        border-radius: 1.5rem;
+        padding: 2rem;
+        font-size: 2rem;
+        transition: 0.5s ease;
+    }
+}
+
+@media (max-width: 545px) {
+    /* PROJECTS PAGE */
+
+    .projects-layer h4 {
+        font-size: 2.75rem;
+        font-weight: 600;
+        line-height: 3rem;
+        margin-bottom: 1rem;
+    }
+
+    .projects-layer p {
+        font-size: 2.25rem;
+        line-height: 2.75rem;
+        margin: .3rem 0 1rem;
+    }
+
+    .projects-layer s {
+        font-size: 1.5rem;
+        margin: .3rem 0 1rem;
+    }
+
+    .projects-layer a {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        color: var(--text-color);
+        background: var(--second-main-color);
+        border-radius: 1.5rem;
+        padding: 2rem;
+        font-size: 2rem;
+        transition: 0.5s ease;
+    }
+}
+
+@media (max-width: 489px) {
+    /* PROJECTS PAGE */
+
+    .projects-layer h4 {
+        font-size: 2.5rem;
+        font-weight: 600;
+        line-height: 2.75rem;
+        margin-bottom: 1rem;
+    }
+
+    .projects-layer p {
+        font-size: 2rem;
+        line-height: 2.5rem;
         margin: .3rem 0 1rem;
     }
 
